--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,6 +3,7 @@ updates:
   # Fetch and update latest `npm` packages
   - package-ecosystem: npm
     directory: '/'
+    versioning-strategy: increase
     schedule:
       interval: daily
       time: '00:00'
