fix: stylelint packages & config
Signed-off-by: Vinayak Kulkarni <19776877+vinayakkulkarni@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -52,9 +52,8 @@
     "sass": "^1.58.3",
     "start-server-and-test": "^2.0.0",
     "stylelint": "^15.1.0",
-    "stylelint-config-prettier": "^9.0.4",
     "stylelint-config-recommended-vue": "^1.4.0",
-    "stylelint-config-standard": "^30.0.1",
+    "stylelint-prettier": "^3.0.0",
     "typescript": "^4.9.5",
     "vite": "^3.2.4",
     "vitest": "^0.28.5",
