--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "mapbox-gl": "1.13.2",
-    "v-mapbox": "3.3.1",
+    "maplibre-gl": "^2.4.0",
+    "v-mapbox": "^4.0.2",
     "vue": "^3.2.47"
   },
   "devDependencies": {
@@ -33,29 +33,29 @@
     "@commitlint/config-conventional": "^17.4.4",
     "@rushstack/eslint-patch": "^1.2.0",
     "@types/jsdom": "^21.1.0",
-    "@types/node": "^18.15.0",
+    "@types/node": "^18.15.3",
     "@vinayakkulkarni/prettier-config-vue": "^1.0.0",
-    "@vitejs/plugin-vue": "^3.2.0",
+    "@vitejs/plugin-vue": "^4.0.0",
     "@vue/eslint-config-prettier": "^7.1.0",
     "@vue/eslint-config-typescript": "^11.0.2",
     "@vue/test-utils": "^2.3.1",
     "@vue/tsconfig": "^0.1.3",
     "cypress": "^12.7.0",
-    "eslint": "^8.35.0",
+    "eslint": "^8.36.0",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.9.0",
     "husky": "^8.0.3",
-    "jsdom": "^21.1.0",
+    "jsdom": "^21.1.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.4",
-    "sass": "^1.58.3",
+    "sass": "^1.59.2",
     "start-server-and-test": "^2.0.0",
     "stylelint": "^15.2.0",
     "stylelint-config-recommended-vue": "^1.4.0",
     "stylelint-prettier": "^3.0.0",
     "typescript": "^4.9.5",
-    "vite": "^3.2.4",
+    "vite": "^4.1.4",
     "vitest": "^0.29.2",
     "vue-tsc": "^1.2.0"
   }
